--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
+    "method-override": "^3.0.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.7.3"
   },
