--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-timeout": "^1.9.0",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
     "method-override": "^3.0.0",
