--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "Cheer",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-session": "0.0.1",
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.4",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-validator": "^5.3.1",
     "hbs": "^4.0.5",
     "method-override": "^3.0.0",
     "mongod": "^2.0.0",
-    "mongoose": "^5.7.3"
+    "mongoose": "^5.7.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
