--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongod": "^2.0.0",
     "mongoose": "^5.7.3",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "timeout": "^0.2.1"
   },
   "devDependencies": {},
   "scripts": {
