--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "Cheer",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "connect-flash": "^0.1.1",
-    "connect-session": "0.0.1",
-    "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.4",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.16.2",
     "express-validator": "^5.3.1",
     "hbs": "^4.0.5",
+    "http-server": "^0.11.1",
     "method-override": "^3.0.0",
     "mongod": "^2.0.0",
     "mongoose": "^5.7.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "save-dev": "0.0.1-security",
     "timeout": "^0.2.1"
   },
   "devDependencies": {},
